# hashcode-2018

./: .clang-format  README.md
cpp/: CMakeLists.txt  solution.cpp
java/src/: FastScanner.java  Main.java  SelfDrivingRides.java
